--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MoviaApp</string>
+    <string name="title_activity_search_movie">SearchMovie</string>
+    <string name="action_settings">Settings</string>
+    <string name="search_hint">movie_name</string>
+    <string name="app_label">Search</string>
+    <string name="search_title">search</string>
 </resources>
