--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="search_hint">movie_name</string>
     <string name="app_label">Search</string>
-    <string name="search_title">movieOnList</string>
+    <string name="search_title">search</string>
 </resources>
