--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,7 @@
     <string name="action_settings">Settings</string>
     <string name="movie_poster">movie_poster</string>
     <string name="search_movie">search movie</string>
+    <string name="title_activity_movie">MovieActivity</string>
+    <string name="save_movie_menu_item">save movie menu item</string>
+    <string name="delete_movie_menu_item">delete movie menu item</string>
 </resources>
